# public/swagger.json
@@ -213,6 +213,126 @@
 			"UpdateJobPostDto": {
 				"$ref": "#/components/schemas/Partial_createJobDto_"
 			},
+			"ICandidateModel": {
+				"properties": {
+					"_id": {
+						"type": "string"
+					},
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"phone": {
+						"type": "string"
+					},
+					"dateOfBirth": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"_id",
+					"firstName",
+					"lastName",
+					"email",
+					"phone",
+					"dateOfBirth"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_ICandidateModel.Exclude_keyofICandidateModel._id__": {
+				"properties": {
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"phone": {
+						"type": "string"
+					},
+					"dateOfBirth": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"firstName",
+					"lastName",
+					"email",
+					"phone",
+					"dateOfBirth"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_ICandidateModel._id_": {
+				"$ref": "#/components/schemas/Pick_ICandidateModel.Exclude_keyofICandidateModel._id__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"IAddCandidateDto": {
+				"properties": {
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"phone": {
+						"type": "string"
+					},
+					"dateOfBirth": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"firstName",
+					"lastName",
+					"email",
+					"phone",
+					"dateOfBirth"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Partial_IAddCandidateDto_": {
+				"properties": {
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"phone": {
+						"type": "string"
+					},
+					"dateOfBirth": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
+			},
+			"UpdateCandidateDto": {
+				"$ref": "#/components/schemas/Partial_IAddCandidateDto_"
+			},
 			"createAccountDto": {
 				"properties": {
 					"firstName": {
@@ -503,6 +623,180 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/UpdateJobPostDto"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/candidates": {
+			"post": {
+				"operationId": "Add",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ICandidateModel"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Candidates"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IAddCandidateDto"
+							}
+						}
+					}
+				}
+			},
+			"get": {
+				"operationId": "GetAll",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/ICandidateModel"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Candidates"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/api/candidates/{id}": {
+			"get": {
+				"operationId": "GetOne",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ICandidateModel"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Candidates"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"delete": {
+				"operationId": "Delete",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ICandidateModel"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Candidates"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"patch": {
+				"operationId": "Update",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ICandidateModel"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Candidates"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateCandidateDto"
 							}
 						}
 					}
