# src/routes/api/index.routes.ts
@@ -1,15 +1,14 @@
-import passport from 'passport';
-import { NextFunction, Router } from 'express'
+import { Router } from 'express'
 import authRouter from './auth.routes'
 import jobPostsRouter from './jobPost.routes';
-import { Strategy as JWTStrategy, ExtractJwt } from "passport-jwt";
-import { appEnv } from '../../utils/env';
 import { checkBearerToken } from '../../middlewares/auth';
+import candidatesRouter from './candidates.routes';
 
 
 const apiRouter = Router()
 apiRouter.use('/auth', authRouter);
-apiRouter.use('/jobPosts', checkBearerToken, jobPostsRouter)
+apiRouter.use('/jobPosts', checkBearerToken, jobPostsRouter);
+apiRouter.use('/candidates', checkBearerToken, candidatesRouter)
 
 export default apiRouter
 
